Fix: fixed horizontal scroll

--- a/blocks/two-columns/__brief/two-columns__brief.css
+++ b/blocks/two-columns/__brief/two-columns__brief.css
@@ -2,7 +2,7 @@
     color: #2f80ed;
     font-size: 18px;
     line-height: 1.2;
-    width: 80vh;
+    width: 80%;
     margin: 0;
     font-weight: 400;
 }
